force-app/main/default/objects/OrderSummary/fields/Delivery_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Tracking__c</fullName>
    <label>Delivery Tracking</label>
    <type>Url</type>
</CustomField>