force-app/main/default/objects/OrderSummary/fields/Desired_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Delivery_Date__c</fullName>
    <description>Order&apos;s Desired Delivery date. Used to show on the Oder Summary record in the Storefront for the Customer.</description>
    <formula>OriginalOrder.DesiredDeliveryDate__c</formula>
    <label>Desired Delivery Date</label>
    <type>Date</type>
</CustomField>