force-app/main/default/objects/OrderSummary/fields/DesiredDeliveryDate_Formula__c.field-meta.xml
<CustomField>
    <fullName>DesiredDeliveryDate_Formula__c</fullName>
    <description>Order&apos;s Desired Delivery date. Used to show on the Order Summary record in the Storefront for the Customer.</description>
    <formula>OriginalOrder.DesiredDeliveryDate__c</formula>
    <label>Desired Delivery Date</label>
    <type>Date</type>
</CustomField>