force-app/main/default/objects/OrderSummary/fields/Payment_Status2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status2__c</fullName>
    <formula>TEXT(OriginalOrder.Payment_Status__c)</formula>
    <label>Payment Status2</label>
    <type>Text</type>
</CustomField>