force-app/main/default/objects/OrderSummary/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Updates either the flow: Update Payment Status on Order Summary and Order or through AS400 integration. Visible for the Storefront User.</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Status</valueSetName>
    </valueSet>
</CustomField>